--- a/app/layouts/navegacao.html
+++ b/app/layouts/navegacao.html
@@ -1,16 +1,9 @@
-<div class="col-md-10 col-md-offset-1" id="painel-vendas">
+<div class="col-md-10 col-md-offset-1">
     <div class="panel panel-primary">
-        <div class="panel-heading row">
-            <div  class="col-md-8">
-                <h4>
-                    Navegação
-                </h4>
-            </div>
-            <div class="col-md-4 text-right">
-                <a href="javascript:history.go(-1)" class="btn btn-circle btn-warning"><i class="fa fa-arrow-left fa-fw"></i></a>
-                <a href="/" class="btn btn-circle btn-info"><i class="fa fa-home fa-fw"></i></a>
-                <a href="javascript:history.go(1)" class="btn btn-circle btn-warning"><i class="fa fa-arrow-right fa-fw"></i></a>
-            </div>
+        <div class="panel-heading">
+            <a href="javascript:history.go(-1)" class="btn btn-circle btn-warning"><i class="fa fa-arrow-left fa-fw"></i></a>
+            <a href="/" class="btn btn-circle btn-info"><i class="fa fa-home fa-fw"></i></a>
+            <a href="javascript:history.go(1)" class="btn btn-circle btn-warning"><i class="fa fa-arrow-right fa-fw"></i></a>
         </div>
         <div class="panel-body" id="projetos">
 
