--- a/app/layouts/navegacao.html
+++ b/app/layouts/navegacao.html
@@ -8,5 +8,11 @@
         <div class="panel-body" id="projetos">
 
         </div>
+        <div class="panel-footer">
+            <div class="col-md-4 col-md-offset-8">
+                <input class="form-control" id="pesquisa-nav" />
+            </div>
+            <div class="clearfix"></div>
+        </div>
     </div>
 </div>
