Update Nav +=> ADD FILES

--- a/app/layouts/navegacao.html
+++ b/app/layouts/navegacao.html
@@ -9,7 +9,12 @@
 
         </div>
         <div class="panel-footer">
-            <div class="col-md-4 col-md-offset-8">
+            <div class="col-md-3">
+                <a class="btn btn-block btn-primary" style="font-weight: bolder;">
+                    <i class="fa fa-plus fa-fw fa-1x"></i> CRIAR NOVO JSON
+                </a>
+            </div>
+            <div class="col-md-4 col-md-offset-5">
                 <input class="form-control" id="pesquisa-nav" />
             </div>
             <div class="clearfix"></div>
