--- a/app/layouts/navegacao.html
+++ b/app/layouts/navegacao.html
@@ -10,7 +10,7 @@
         </div>
         <div class="panel-footer">
             <div class="col-md-3">
-                <a class="btn btn-block btn-primary" style="font-weight: bolder;">
+                <a class="btn btn-block btn-primary" style="font-weight: bolder;" onclick="$.post(location.href, {arquivo: prompt('Nome do arquivo: ','%projeto%')}, function(){window.history.go(0)});">
                     <i class="fa fa-plus fa-fw fa-1x"></i> CRIAR NOVO JSON
                 </a>
             </div>
